--- a/Day_1_Python_Basics/Day_1_Task_Basics_Of_Python_Mini_Project_1.ipynb
+++ b/Day_1_Python_Basics/Day_1_Task_Basics_Of_Python_Mini_Project_1.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    print("Starting the trading session")
+    "print("Starting the trading session")"
    ]
   },
   {
